<resources>
    <string name="app_name">IT Asset Manager</string>
    <string name="hello_world">Hello world!</string>
    <string name="welcome_caps">WELCOME!</string>
    <string name="action_settings">Settings</string>
    <string name="btn_text_login">Log In</string>
    <string name="title_activity_login">Log In</string>
    <string name="hint_password">Password</string>
    <string name="hint_user">User Name</string>
    <string name="hint_url_caps">URL</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="action_forgot_password">Recover lost password</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY CONTENT</string>
    <string name="title_received_assets">Received Assets</string>
    <string name="title_activity_review_assets">ReviewAssetsActivity</string>
    <string name="title_activity_main_nav">MainNavActivity</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_inventory_audit">Inventory Audit</string>
    <string name="title_configure_settings">Configure Settings</string>
    <string name="title_edit_assets">Edit Assets</string>
    <string name="title_dispose_assets">Dispose Assets</string>
    <string name="title_review_assets">Review Assets</string>
    <string name="title_swap_assets">Swap Assets</string>
    <string name="title_activity_search_assets">SearchAssetsActivity</string>
    <string name="title_activity_asset_search_results">AssetSearchResultsActivity</string>
    <string name="title_activity_scan_assets">ScanAssets</string>
    <string name="title_activity_match_confirmation">MatchConfirmationActivity</string>
    <string name="title_activity_asset_properties">AssetPropertiesActivity</string>
    <string name="hint_search_by_keyword">Search by Keyword on Order #</string>
    <string name="search_asset">Search Asset</string>
    <string name="text_or">- or -</string>
    <string name="browse_all_products">Browse All Products</string>
    <string name="title_activity_inventory_audit">InventoryAudit</string>
    <string name="title_activity_configure_settings">ConfigureSettings</string>
    <string name="button_scan">Scan</string>
    <string name="title_activity_scan">ScanActivity</string>
    <string name="scan_bar_code">Scan Barcode</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="scan_anything">Scan Codes</string>
    <string name="result_succeeded">Found barcode</string>
    <string name="result_failed">No barcode found</string>
    <string name="barcode_exists">Barcode exists</string>
    <string name="result_failed_why">The user gave up and pressed Back button</string>
    <string name="ok_button">OK</string>
    <string name="touch_to_scan">Tap to Scan</string>
    <string name="next">Next</string>
    <string name="scanned_items">Scanned Items</string>
    <string name="title_activity_main_nav_ex">MainNavExActivity</string>
    <string name="title_activity_inventory_search">InventorySearchActivity</string>
    <string name="by_cireson">by Cireson</string>
    <string name="splash_it_assets_management">IT Asset Management</string>
    <string name="warning">Warning</string>
    <string name="error">Error</string>
    <string name="message">Message</string>
    <string name="start_new_purchase_order">Start New Purchase Order</string>
    <string name="button_save">Save</string>
    <string name="button_done">Done</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_clear">Clear</string>
    <string name="button_reset">Reset</string>
    <string name="button_search">Search</string>
    <string name="button_home">Home</string>
    <string name="button_email">Email</string>
    <string name="login_success_message">Logged in</string>
    <string name="login_failed_message">Sorry, login failed. Please check user credentials and your network connection</string>
    <string name="login_prompt_incomplete_credentials">Please specify the login credentials correctly.</string>
    <string name="menu_receive_assets">Receive Assets</string>
    <string name="menu_swap_assets">Swap Assets</string>
    <string name="menu_edit_assets">Edit Assets</string>
    <string name="menu_inventory_audit">Inventory Audit</string>
    <string name="menu_dispose_assets">Dispose Assets</string>
    <string name="menu_settings">Settings</string>
    <string name="search_assets_title">FIND ASSETS</string>
    <string name="search_assets_search_edit_text_hint">Search by Purchase Order #</string>
    <string name="search_assets_browse_button_text">Browse Purchase Orders</string>
    <string name="search_assets_receive_assets_button_text">Add Assets</string>
    <string name="search_assets_search_text_field_empty">Search field must not be empty</string>
    <string name="search_assets_result_title">Search Results for:</string>
    <string name="search_assets_text_for_scan_assets_title">Match Assets for </string>
    <string name="search_assets_result_sub_title">Last 90 days</string>
    <string name="search_assets_result_purchase_order_not_found">Purchase order not found.</string>
    <string name="scan_assets_title_for_add">Scan Assets to Add</string>
    <string name="scan_assets_title_for_swap">Scan Asset to Swap</string>
    <string name="scan_assets_title_for_edit">Scan Assets to Edit</string>
    <string name="scan_assets_title_for_dispose">Scan Assets to Dispose</string>
    <string name="scan_assets_zinx_fragment_button_scan">USE CAMERA</string>
    <string name="scan_assets_zinx_fragment_button_use_bluetooth">USE BLUETOOTH</string>
    <string name="scan_assets_title_for_dialog">Scan Assets to Dispose</string>
    <string name="scan_assets_title_for_dialog_when_scan_for_receive_Assets">
        New assets will be created with the scanned barcodes. Were the barcodes scanned with the asset tag or serial number of the hardware asset?
        Note: If there were errors while looking up the barcodes, they will be discarded
    </string>
    <string name="scan_assets_title_for_dialog_when_scan_for_receive_Assets_changed">
        New assets will be created with the scanned barcodes. Were the barcodes scanned with the asset tag or serial number of the hardware asset?
    </string>
    <string name="scan_assets_title_for_dialog_to_prompt_user__with_list_when_scan_for_receive_Assets">Were the barcode scanned the asset tag or serial number of the hardware asset?</string>
    <string name="scan_assets_title_for_warning_dialog">Are you sure you want to Delete this item?</string>
    <string name="scan_assets_choice_asset_tag">Asset Tag</string>
    <string name="scan_assets_choice_serial_number">Serial Number</string>
    <string name="scan_assets_list_row_asset_item_text">Asset Item</string>
    <string name="scan_assets_list_row_searching_text">(Searching...)</string>
    <string name="scan_assets_list_row_search_error_text">(error)</string>
    <string name="scan_assets_no_matched_assets_error_message">All assets for this purchase order have been assigned.</string>
    <string name="scan_assets_no_matched_assets_to_go_to_next_page">Please match at least one asset.</string>
    <string name="scan_assets_no_asset_to_go_to_next_page">Please scan at least one asset to proceed.</string>
    <string name="scan_assets_no_asset_to_add">Please scan and match at least one asset to proceed.</string>
    <string name="toast_message_for_scan_assets_activity">Sorry,no data is available to proceed.</string>
    <string name="scan_assets_no_new_barcode">Please scan at least one new barcode to proceed.</string>
    <string name="scan_assets_add_assets_api_call_in_process">
        We are still checking if the assets you have scanned already exist in the system, please try again in a few moments.
    </string>
    <string name="possible_matched_assets_title">Match Asset for Barcode</string>
    <string name="possible_matched_assets_sub_title">Number</string>
    <string name="edit_assets_general_title"></string>
    <string name="add_assets_title">Assets being created</string>
    <string name="edit_assets_title_for_swap_count">1</string>
    <string name="edit_assets_title">Edit Asset Properties</string>
    <string name="edit_assets_title_for_inventory_audit">Search for Assets</string>
    <string name="edit_assets_saved_message_for_receive_assets">All Assets have been successfully Saved</string>
    <string name="edit_assets_saved_message_for_add_assets">All Assets have been successfully Added</string>
    <string name="edit_assets_saved_message_for_swap_assets">All Assets Have Been Successfully Swapped</string>
    <string name="edit_assets_saved_message_for_edt_assets">All Assets have been successfully Edited</string>
    <string name="edit_assets_display_message_for_search_invalid_criteria">Please select at least one criteria to search with</string>
    <string name="status_title">Select Status</string>
    <string name="select_title">Select</string>
    <string name="swap_assets_note_editor_title">Append to Notes</string>
    <string name="swap_assets_note_editor_text_limit_exceeded">You will exceed the maximum limit of 4000 characters. Please shorten the notes.</string>
    <string name="custodian_search_title">Select User</string>
    <string name="custodian_search_edit_text">Search for user</string>
    <string name="custodian_search_edit_text_empty">Please specify a text to search.</string>
    <string name="custodian_search_edit_text_unsufficient_characters">A minimum of 3 characters are required.</string>
    <string name="date_picker_title">Select Date</string>
    <string name="date_picter_check_box_descriptor">Do not use date</string>
    <string name="inventory_search_title">Search Results</string>
    <string name="inventory_search_sub_title">text</string>
    <string name="inventory_search_text_found">Found</string>
    <string name="inventory_search_text_assets">assets</string>
    <string name="inventory_search_text_to_swap">Choose one to swap</string>
    <string name="inventory_search_error_in_search">Some error occurred while searching assets.</string>
    <string name="inventory_search_criteria_required">Search Criteria Required.</string>
    <string name="inventory_search_no_assets_found">No assets were found with the selected criteria, please modify your search and try again.</string>
    <string name="inventory_search_asset_disposed_state_for_dispose_flow">Already Disposed</string>
    <string name="inventory_search_no_asset_found_as_matched_for_swap">Could not find an Asset with ID:</string>
    <string name="inventory_search_list_row_asset_name">Asset Name: </string>
    <string name="inventory_search_list_row_manufacturer">Manufacturer: </string>
    <string name="inventory_search_list_row_model">Model: </string>
    <string name="inventory_search_list_row_serial_number">Serial #: </string>
    <string name="inventory_search_list_row_asset_tag">Asset Tag: </string>
    <string name="edit_dispose_ref_title_for_added_assets_manufacturer">Edit Manufacturer</string>
    <string name="edit_dispose_ref_title_for_added_assets_model">Edit Model</string>
    <string name="edit_dispose_ref_title"></string>
    <string name="review_email_settings_title">Audit Results Review</string>
    <string name="review_email_settings_not_inventoried">Not Inventoried</string>
    <string name="review_email_settings_inventoried">Inventoried</string>
    <string name="review_email_settings_no_match">No Match</string>
    <string name="settings_logout">Logout</string>
    <string name="settings_change_bluetooth_scanner">Change Bluetooth Scanner</string>
    <string name="settings_currently_using_device_name">Currently using: None</string>
</resources>