<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    style="@style/cireson_main_container"
    tools:context="com.cireson.assetmanager.controller.AssetsSearchActivity"
    tools:ignore="MergeRootFrame"
    android:orientation="vertical">
    <LinearLayout
        style="@style/cireson_header_linear_layout"
        android:orientation="vertical"
        android:layout_marginBottom="0dp"
        android:layout_marginTop="0dp">
        <TextView
            style="@style/cireson_title"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:text="ADD ASSETS"
            android:textStyle="bold"/>
    </LinearLayout>

    <Button
        android:id="@+id/addAssets"
        style="@style/cireson_buttons"
        android:layout_width="250dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/search_assets_receive_assets_button_text"
        android:onClick="onClick"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="1dp"
        android:layout_gravity="center_horizontal"
        android:background="#EAAE45"
        android:layout_marginTop="6dp"
        ></LinearLayout>

    <!--Header-->
    <LinearLayout
        style="@style/cireson_header_linear_layout"
        android:orientation="vertical"
        android:layout_marginBottom="0dp"
        android:layout_marginTop="0dp">
        <TextView
            style="@style/cireson_title"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/search_assets_title"
            android:textStyle="bold"
        />
    </LinearLayout>
    <!--Body-->
    <LinearLayout style="@style/cireson_body_linear_layout"
       >
        <EditText
            android:id="@+id/editSearchByKeyword"
            style="@style/cireson_edit_texts"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:textColorHint="#dddddd"
            android:hint="@string/search_assets_search_edit_text_hint"
            android:inputType="textNoSuggestions"
            android:background="@drawable/corners_bg"/>
        <Button
            android:id="@+id/searchAssets"
            style="@style/cireson_buttons"
            android:layout_width="130dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/button_search"
            android:onClick="onClick"
            android:textStyle="bold"/>
        <Button
            android:id="@+id/browseOrders"
            style="@style/cireson_buttons"
            android:layout_width="250dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/search_assets_browse_button_text"
            android:onClick="onClick"
            android:textStyle="bold"/>
    </LinearLayout>

    <!--Footer-->
    <!--<Button-->
        <!--android:id="@+id/invalidateToken"-->
        <!--style="@style/cireson_footer_button"-->
        <!--android:layout_marginBottom="0dp"-->
        <!--android:layout_alignParentBottom="true"-->
        <!--android:text="Invalidate Token"-->
        <!--android:onClick="invalidateToken">-->
    <!--</Button>-->

    <!--Footer-->
    <Button
        android:id="@+id/homeBtn"
        style="@style/cireson_footer_button"
        android:layout_marginBottom="0dp"
        android:layout_alignParentBottom="true"
        android:text="@string/button_home"
        android:onClick="goToHome">
    </Button>
</LinearLayout>
