<?xml version="1.0" encoding="utf-8"?>

<com.cireson.assetmanager.component.CheckableLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/list_row_background">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="15dp"
        android:layout_marginBottom="2dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                style="@style/inventory_assets_search_list_row"
                android:text="@string/inventory_search_list_row_asset_name"/>
            <TextView
                style="@style/inventory_assets_search_list_row"
                android:text="@string/inventory_search_list_row_manufacturer"/>
            <TextView
                style="@style/inventory_assets_search_list_row"
                android:text="@string/inventory_search_list_row_model"/>
            <TextView
                style="@style/inventory_assets_search_list_row"
                android:text="@string/inventory_search_list_row_serial_number"/>
            <TextView
                style="@style/inventory_assets_search_list_row"
                android:text="@string/inventory_search_list_row_asset_tag"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginLeft="5dp"
            android:orientation="vertical">
        <TextView
            android:id="@+id/inventorySearchAssetsName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            android:layout_gravity="left"
            android:maxLines="1"
            android:ellipsize="end"
            />
        <TextView
            android:id="@+id/inventorySearchAssetsRowName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            android:layout_gravity="left"
            android:maxLines="1"
            android:ellipsize="end"/>
        <TextView
            android:id="@+id/inventorySearchAssetsRowModel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            android:layout_gravity="left"
            android:maxLines="1"
            android:ellipsize="end"/>
        <TextView
            android:id="@+id/inventorySearchAssetsRowSerialNumber"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            android:layout_gravity="left"
            android:maxLines="1"
            android:ellipsize="end"/>
        <TextView
            android:id="@+id/inventorySearchAssetsRowTag"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            android:layout_gravity="left"
            android:maxLines="1"
            android:ellipsize="end"
            />
        </LinearLayout>
        <!--<LinearLayout-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="match_parent"-->
            <!--android:orientation="vertical">-->
            <!--&lt;!&ndash;<ImageView&ndash;&gt;-->
                <!--&lt;!&ndash;android:id="@+id/inventory_search_assets_list_view_right_image"&ndash;&gt;-->
                <!--&lt;!&ndash;android:layout_width="22dp"&ndash;&gt;-->
                <!--&lt;!&ndash;android:layout_height="22dp"&ndash;&gt;-->
                <!--&lt;!&ndash;android:layout_gravity="center_vertical"&ndash;&gt;-->
                <!--&lt;!&ndash;android:layout_marginLeft="5dp"&ndash;&gt;-->
                <!--&lt;!&ndash;android:src="@drawable/dispose3"&ndash;&gt;-->
                <!--&lt;!&ndash;android:visibility="gone"/>&ndash;&gt;-->
        <!--</LinearLayout>-->
    </LinearLayout>
    <TextView
        android:id="@+id/inventory_search_assets_list_view_right_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="15dp"
        android:textColor="@color/dark_red_color"
        android:textStyle="bold"
        android:text="@string/inventory_search_asset_disposed_state_for_dispose_flow"
        android:visibility="gone"/>
</com.cireson.assetmanager.component.CheckableLinearLayout>

